versions/v2.15/modules/fr/pages/rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/ms-adfs-for-rancher.adoc
= 1. Configuration de Microsoft AD FS pour {rancher-product-name}
:page-languages: [en, de, es, fr, ja, pt, zh]
:revdate: 2025-08-05
:page-revdate: {revdate}
:community-path: how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/configure-microsoft-ad-federation-service-saml/configure-ms-adfs-for-rancher.adoc 
:product-path: rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/ms-adfs-for-rancher.adoc
ifeval::["{build-type}" != "community"]
:xref-rancher-for-ms-adfs: xref:rancher-admin/users/authn-and-authz/microsoft-ad-federation-service-saml/rancher-for-ms-adfs.adoc
endif::[]
ifeval::["{build-type}" == "community"]
:xref-rancher-for-ms-adfs: xref:how-to-guides/new-user-guides/authentication-permissions-and-global-configuration/configure-microsoft-ad-federation-service-saml/configure-rancher-for-ms-adfs.adoc
endif::[]

Avant de configurer Rancher pour prendre en charge le Service de Fédération Active Directory (AD FS), vous devez ajouter Rancher en tant que https://docs.microsoft.com/en-us/windows-server/identity/ad-fs/technical-reference/understanding-key-ad-fs-concepts[partie de confiance] dans AD FS.

. Connectez-vous à votre serveur AD en tant qu'utilisateur administratif.
. Ouvrez la console *Gestion AD FS*. Sélectionnez *Ajouter une partie de confiance..* dans le menu *Actions* et cliquez sur *Démarrer*.
+
image::adfs/adfs-overview.png[]

. Sélectionnez *Entrer les données sur la partie de confiance manuellement* comme option pour obtenir des données sur la partie de confiance.
+
image::adfs/adfs-add-rpt-2.png[]

. Entrez le *Nom d'affichage* souhaité pour votre partie de confiance. Par exemple : `Rancher`.
+
image::adfs/adfs-add-rpt-3.png[]

. Sélectionnez *Profil AD FS* comme profil de configuration pour votre partie de confiance.
+
image::adfs/adfs-add-rpt-4.png[]

. Laissez le *certificat de cryptage de token optionnel* vide, car Rancher AD FS n'en utilisera pas.
+
image::adfs/adfs-add-rpt-5.png[]

. Sélectionnez *Activer le support pour le protocole SAML 2.0 WebSSO* et entrez `\https://<rancher-server>/v1-saml/adfs/saml/acs` pour l'URL du service.
+
image::adfs/adfs-add-rpt-6.png[]

. Ajoutez `\https://<rancher-server>/v1-saml/adfs/saml/metadata` en tant qu'*identifiant de la partie de confiance*.
+
image::adfs/adfs-add-rpt-7.png[]

. Ce tutoriel ne couvrira pas l'authentification à deux facteurs{nbsp}; veuillez vous référer à la https://docs.microsoft.com/en-us/windows-server/identity/ad-fs/operations/configure-additional-authentication-methods-for-ad-fs[documentation Microsoft] si vous souhaitez configurer l'authentification à deux facteurs.
+
image::adfs/adfs-add-rpt-8.png[]

. Dans *Choisir les règles d'autorisation d'émission*, vous pouvez sélectionner l'une des options disponibles selon le cas d'utilisation. Cependant, aux fins de ce guide, sélectionnez *Permettre à tous les utilisateurs d'accéder à cette partie de confiance*.
+
image::adfs/adfs-add-rpt-9.png[]

. Après avoir examiné vos paramètres, sélectionnez *Suivant* pour ajouter la partie de confiance.
+
image::adfs/adfs-add-rpt-10.png[]

. Sélectionnez *Modifier les règles de revendication..* et cliquez sur *Fermer*.
+
image::adfs/adfs-add-rpt-11.png[]

. Dans l'onglet *Règles de transformation d'émission*, cliquez sur *Ajouter une règle..*.
+
image::adfs/adfs-edit-cr.png[]

. Sélectionnez *Envoyer les attributs LDAP en tant que revendications* comme le *modèle de règle de revendication*.
+
image::adfs/adfs-add-tcr-1.png[]

. Définissez le *nom de la règle de revendication* sur le nom souhaité (par exemple, `Rancher Attributes`) et sélectionnez *Active Directory* comme le *magasin d'attributs*. Créez le mappage suivant pour refléter le tableau ci-dessous{nbsp}:
+
|===
| Attribut LDAP
| Type de revendication sortante

| Prénom
| Prénom

| Nom d'utilisateur principal
| UPN

| Groupes de token - Qualifiés par le nom de domaine long
| Groupe

| Nom de compte SAM
| Nom
|===
+
image::adfs/adfs-add-tcr-2.png[]

. Téléchargez le `federationmetadata.xml` depuis votre serveur AD à l'adresse{nbsp}:
+
----
https://<AD_SERVER>/federationmetadata/2007-06/federationmetadata.xml
----

*Résultat :* Vous avez ajouté Rancher en tant que partie de confiance. Vous pouvez maintenant configurer Rancher pour utiliser AD.

[#__xref_rancher_for_ms_adfs_next_configuring_rancher_for_microsoft_ad_fs]
== {xref-rancher-for-ms-adfs}[Suivant{nbsp}: Configuration de Rancher pour Microsoft AD FS]
